--- a/v4.yaml
+++ b/v4.yaml
@@ -8,8 +8,8 @@ ray_serve_config:
     - name: app1
       import_path: hello_with_args:app_builder
       args:
-        message: "Hello world!"
+        message: Hello world!
       runtime_env:
-        working_dir: .
+        working_dir: https://github.com/zcin/sample-serve-applications/archive/refs/heads/main.zip
       deployments:
         - name: HelloWorld
