--- a/v2.yaml
+++ b/v2.yaml
@@ -8,9 +8,9 @@ ray_serve_config:
     - name: app1
       import_path: hello_with_args:app_builder
       args:
-        message: "Hello world!"
+        message: Hello world!
       runtime_env:
-        working_dir: .
+        working_dir: https://github.com/zcin/sample-serve-applications/archive/refs/heads/main.zip
       deployments:
         - name: HelloWorld
 
@@ -18,8 +18,8 @@ ray_serve_config:
       route_prefix: /app2
       import_path: hello_with_args:app_builder
       args:
-        message: "Hello world, this is a different message!"
+        message: Hello world, this is a different message!
       runtime_env:
-        working_dir: .
+        working_dir: https://github.com/zcin/sample-serve-applications/archive/refs/heads/main.zip
       deployments:
         - name: HelloWorld
